welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:52: error: expected class or object definition
def peindre() {
^PatternPicture:55: error: Unmatched closing brace '}' ignored here
  } 
  ^